# checkmaite

./: .gitattributes  .gitignore  .gitlab-ci-local-env  .gitlab-ci-local-variables.yml  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  LICENSE.md  Makefile  README.md  conda-lock.yml  contributing.md  environment-optional.yml  environment.yml  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: docs.yml
.gitlab/issue_templates/: feature-request.md
docs/: RELEASING.md  about.md  conventions.md  index.md
docs/community/: contributing.md  setup.md
docs/development/: analytics_store_guide.ipynb  contributing.md  dev_setup.md  dev_strategy.md  index.md  job_submission_walkthrough.ipynb  key_concepts.md  onnx_model_wrappers.md  persona.md  plugins.md
docs/development/job_submission/: analytics_store.md  configure_backend.md  configure_job_backend.md  index.md  kubernetes.md  protocol.md  ray_backend.md  ray_job_backend.md  ray_simple_job_backend.md  worker_environments.md
docs/examples/: EvaluationTool_evaluate.ipynb  EvaluationTool_prediction.ipynb  IC_Cache_Demo_EvaluationTool.ipynb  Model_Evaluation_Testbed.ipynb  dataset_analysis_configuration.ipynb  image_classification_dataset_wrapper.ipynb  model_evaluation_configuration.ipynb  xaitk_test_stage_how_to_guide.ipynb
docs/explanations/: index.md
docs/get-started/: checkmaite_api_ic.ipynb  checkmaite_api_od.ipynb  checkmaite_interactive.md  checkmaite_ray_serve.ipynb  index.md  install_setup.md  ri_api_ic.ipynb  ri_api_od.ipynb  ri_interactive.md  saving_querying_results.md
docs/how-tos/: Dataset_Analysis_Testbed.ipynb  Model_Evaluation_Testbed.ipynb  dataset_analysis_configuration.ipynb  index.md  model_evaluation_configuration.ipynb  ri_api_ic.ipynb  ri_api_od.ipynb  ri_interactive.md
docs/image-classification/: datasets.md
docs/object-detection/: models.md
docs/reference/: analytics_store_guide.ipynb  conventions.md  development.md  index.md  persona.md  personas.md  workflows.md
docs/reference/examples/: EvaluationTool_evaluate.ipynb  IC_Cache_Demo_EvaluationTool.ipynb  NRTK_GPU.ipynb  README.md  Survivor_EvalCache_Demo.ipynb  analytics_store_guide.ipynb  checkmaite_api_ic_unsupported.ipynb  checkmaite_api_od_unsupported.ipynb  dataeval_bias_analytics_store.ipynb  dataeval_feasibility_analytics_store.ipynb  dataeval_shift_analytics_store.ipynb  datasets.md  image_classification_dataset_wrapper.ipynb  models.md  nrtk_config_and_testbed.ipynb  nrtk_robustness_analytics_store.ipynb  predict_cache_demo.ipynb  reallabel_tutorial.ipynb  ri_api_ic_unsupported.ipynb  ri_api_od_unsupported.ipynb  sample.json  survivor_tutorial.ipynb  torchvision_wrapper.ipynb  visdrone_wrapper.ipynb  xaitk_explainable_analytics_store.ipynb  xaitk_test_stage_how_to_guide.ipynb
docs/tool-usage/: analytics_store_tutorial.ipynb  dataeval_bias_tutorial.ipynb  dataeval_feasibility_tutorial.ipynb  dataeval_linting_tutorial.ipynb  dataeval_shift_tutorial.ipynb  index.md  nrtk_tutorial.ipynb  onnx_object_detection_wrapper.ipynb  ray_job_submission_tutorial.ipynb  ray_simple_job_submission_tutorial.ipynb  xaitk_tutorial.ipynb
docs/tutorials/: _nrtk_tutorial_appendix_perturbers_and_factories.ipynb  dataeval_bias_tutorial.ipynb  dataeval_feasibility_tutorial.ipynb  dataeval_linting_tutorial.ipynb  dataeval_shift_tutorial.ipynb  index.md  nrtk_tutorial.ipynb  reallabel_tutorial.ipynb  survivor_tutorial.ipynb  xaitk_tutorial.ipynb
scripts/: check_bare_pyright_ignore.py  check_conda_lock.py  test_check_bare_pyright_ignore.py
src/checkmaite/: __init__.py  _docs.py
src/checkmaite/core/: _cache.py  _plugins.py  _types.py  _utils.py  cached_tasks.py  capability_core.py
src/checkmaite/jobs/: __init__.py  _api.py  _result.py  _store.py  _submission.py  protocol.py  ray_backend.py
src/checkmaite/ui/: __init__.py  app.py  dashboard_utils.py
src/jatic_ri/: __init__.py  cached_tasks.py
src/jatic_ri/_common/: __init__.py  models.py
src/jatic_ri/core/: _cache.py  _types.py  _utils.py  cached_tasks.py  capability_core.py
src/jatic_ri/deploy/: app.py
src/jatic_ri/image_classification/: augmentation.py  datasets.py  metrics.py  models.py
src/jatic_ri/object_detection/: augmentation.py  datasets.py  metrics.py  models.py
src/jatic_ri/ui/: __init__.py  app.py  dashboard_utils.py
src/jatic_ri/util/: _cache.py  _cachev2.py  _types.py  cache.py  dashboard_utils.py  evaluation.py  slide_deck.py  utils.py
tests/: __init__.py  conftest.py  fake_ic_classes.py  fake_od_classes.py  report_assertions.py  test_cached_tasks.py  test_import.py
tests/data_for_tests/coco_dataset/: ann_file.json
tests/data_for_tests/coco_resized_val2017/: instances_val2017_resized_6.json  single_image.json  three_image.json
tests/data_for_tests/yolo_dataset/: dataset.yaml
tests/test_common/: test_models.py
tests/test_common/test_impls/: test_common_dataeval_bias_test_stage.py  test_common_dataeval_utils.py
tests/test_common/test_interfaces/: test_plugins.py  test_teststage.py
tests/test_common/test_panel/: conftest.py
tests/test_core/: test_cached_tasks.py  test_capability_core.py  test_cloud_storage_datasets.py  test_rayserve.py  test_rayserve_status.py  test_types.py  test_utils.py
tests/test_core/test_analytics_store/: test_bias_record_integration.py  test_nrtk_record_integration.py  (+7 more)
tests/test_e2e/: conftest.py  test_run_all_ic.py  test_run_all_od.py
tests/test_image_classification/: conftest.py
tests/test_jobs/: conftest.py  fakes.py  ray_test_utils.py  test_api.py  test_protocol.py  test_ray_backend.py  test_result.py  test_store.py
tests/test_report/: test_dataeval_bias_md.py  test_maite_md.py  test_models.py
tests/test_scripts/: test_check_bare_pyright_ignore.py
tests/test_ui/: conftest.py  test_app_entrypoint.py  test_dashboard_utils.py  test_dataset_analysis_app_common.py  test_heart_app_common.py  test_ui_init.py
tests/test_util/: test_cache.py  test_dashboard_utils.py  test_evaluation.py  test_utils.py
tests/testing_utilities/: .gitattributes  __init__.py  example_maite_objects.py  testing_utilities.py
(+423 files in other folders)
