[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "jatic-ri"
version = "0.1.2"
description = "JATIC Reference Implementation"
readme = "README.md"
license = { text = "TBD" }
authors = [
    { name = "OpenTeams" },
]
keywords = [
    "jatic",
    "artificial intelligence",
    "testing and evaluation",
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.10, <3.12"

dynamic = ["dependencies"]

[tool.conda-lock]
channels = ['conda-forge', 'fastai']
platforms = ['linux-64']

[tool.conda-lock.dependencies]
# conda only dependencies (usually system dependencies)
python = ">=3.10,<3.12"                            # required by SDP
openjdk = "=17"                                    # pyspark 3.x suports Java 8/11/17
cudatoolkit = "*"                                  # necessary to suppress conda-lock warning
timm = ">=1.0.7"
libgl = "*"
libopengl = "*"                                    # patch for a missing dependency from something (opencv?) in conda-forge
pip = "*"                                          # ensure pip is available for conda-lock
poetry = "==2.1.2"                                 # allow user to still use the `make check-conda` pre-commit hook

[tool.poetry]
packages = [{ include = "jatic_ri", from = "src" }]
include = ["src/jatic_ri/py.typed"]
exclude = ["src/jatic_ri/_docs.py"]

[tool.poetry.dependencies]
gradient = {git = "https://gitlab.jatic.net/jatic/morse/gradient.git", tag="0.12.2"}
dataeval = "==0.92.3"
maite = "0.8.2"
nrtk = "==0.25.0"
pybsm = ">=0.12.0"                                                 # optional dep for nrtk, required here
xaitk-saliency = "==0.12.0"
xaitk-jatic = "==0.7.0"
# external deps
holoviews = { version = ">=1.20.0", optional = true }              # arbitrary, required for panel pipelines
httpx = ">=0.28.1"                                                 # arbitrary, needed to run visdrone model
jupyterlab = { version = ">=4.3.5", optional = true }              # arbitrary, required for serving panel notebooks via CLI
matplotlib = ">=3.8.4,< 3.10.8"                                    # arbitrary, required by panel, 3.10.8 limit can be removed when artifact is released on PyPI
nbconvert = { version = ">=7.16.6", optional = true }              # arbitrary, required for serving panel notebooks via CLI
numba = ">=0.60.0"                                                 # arbitrary, needed to run visdrone model
opencv-python-headless = ">=4.9.0.80"                              # necessary lower pin, required by nrtk usage here
pandas = ">=2"                                                     # arbitrary, required for data handling
panel = { version = ">=1.5.1,<=1.7.1", optional = true }           # necessary for FileDropper widget, and for progression of dashboards
pillow = ">=11.0.0"                                                # arbitrary
pydantic = ">=2.0.0"                                               # arbitrary
scikit-learn = ">=1.7.0"                                           # arbitrary, required for embeddings
streamz = { version = ">=0.6.4", optional = true }                 # arbitrary
torch = ">=2.2.0"                                                  # necessary lower pin (at least >=2.2.0 for security)
torchmetrics = ">=1.4.0"                                           # arbitrary, required for metric computation
torchvision = ">=0.17.0"                                           # arbitrary, required for models
smqtk-core = ">=0.21.0"                                            # necessary lower pin for compatibility with pydantic
smqtk-detection = ">=0.22.0"                                       # necessary lower pin for running VisDrone model on Mac
transformers = {extras = ["timm"], version = ">=4.48.0,!=4.51.0"}  # necessary lower pin for xaitk panel app for security vulnerability

[tool.poetry.group.dev.dependencies]
pre-commit = ">=3.0.0"                             # arbitrary
pyright = {extras = ["nodejs"], version = ">=1.1.400,!=1.1.401"}  # necessary, typechecker will fail for some versions, https://github.com/microsoft/pyright/issues/10487
pyspark = ">=3.5.3"                                # arbitrary
pytest = ">=8.3.0"                                 # necessary lower pin for compatibility
pytest-cov = ">=4.0.0"                             # arbitrary
pytest-mock = ">=3.6.1"                            # arbitrary
# This is not needed by us, but required to avoid a critical vulnerability warning
# See https://gitlab.jatic.net/jatic/reference-implementation/reference-implementation/-/issues/201#note_176213 for details
virtualenv = ">=20.26.6"
conda-lock = ">=3.0.3"                             # necessary, used to update conda-lock.yml
ruamel-yaml = ">=0.17.21"                          # necessary, for comment-preserving YAML manipulation

[tool.poetry.group.docs.dependencies]
mkdocs = ">=1.6.1"                                 # arbitrary
mkdocs-jupyter = ">=0.25"                          # arbitrary
mkdocs-material = ">=9.6.4"                        # arbitrary
pymdown-extensions = ">=10.14.3"                   # arbitrary

[tool.poetry.scripts]
jatic-ri-serve = "jatic_ri.ui.app:main"

# We use this instead of an optional Poetry group because in our testing we found that conda-lock (v 3.0.4) does not
# appear to honor optional dependencies when the source is a Git URL... this causes problems at solve time if the solver
# does not have a valid token for gitlab.jatic.net, and at install time since it appears to pip install the git-sourced
# dependencies even when they're in an "optional" Poetry group. These will not be included in the conda-lock file.
[project.optional-dependencies]
unsupported = [
    "heart-library==0.7.0",
    "reallabel @ git+https://gitlab.jatic.net/jatic/morse/reallabel.git@0.6.4",
    "survivor @ git+https://gitlab.jatic.net/jatic/morse/survivor.git@0.4.6",
]
ui = [
    "holoviews>=1.20.0",
    "jupyterlab>=4.3.5",
    "nbconvert>=7.16.6",
    "panel>=1.5.1,<=1.7.1",
    "streamz>=0.6.4"
]

[tool.bandit]
exclude_dirs = [
    "tests", "scripts"
]

[tool.pyright]
reportMissingImports = "warning"
reportUnnecessaryTypeIgnoreComment = "error"
include = [
    "src",
]
exclude = [
    "**/ui", "tests"
]

[tool.ruff]
exclude = [
  "environment*", "scripts/test_check_bare_pyright_ignore.py"
]

line-length = 120
indent-width = 4
target-version = "py310"
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = ["F", "E", "W", "C90", "I", "N", "D200", "D201", "D211", "D403", "D419", "UP",
          "YTT", "ANN", "S",  "BLE", "B", "A", "COM", "C4", "T10", "ISC", "ICN", "PYI", "PT", "Q",
          "RSE", "RET", "SLF", "SIM", "TID252", "ARG", "PD", "FLY", "NPY", "RUF027",
          "RUF100", "PERF"]
ignore = ["ANN101", "ANN102", "ANN401", "COM812", "ISC001", "UP038"]
fixable = ["ALL"]
unfixable = []
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.extend-per-file-ignores]
"**/tests/*" = [
    "ANN",
    "D",
    "ARG",
    "SIM",
    "C90",
    "SLF001",
    "S101",
    "A001",
    "E501",
    "PT007",
    "PT011",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint.isort]
known-first-party = ["jatic_ri"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra --tb=short -m 'not (real_data or unsupported)'"
testpaths = ["tests"]
markers = [
    "real_data",
    "unsupported",
    "heart"
]
filterwarnings = [
    # For full details on warnings suppression, see:
    # https://gitlab.jatic.net/jatic/reference-implementation/reference-implementation/-/issues/497
    # "error",
    # Pydantic warnings about TypedDict ReadOnly qualifiers.  These occur since the qualifiers are for static type 
    # checking only but Pydantic intends to provide runtime checks.  Essentially the error says "It looks from your annotations
    # that you intend this to be ReadOnly, but Pydantic cannot actually enforce this."
    "ignore:Items? .* on TypedDict class .* using the `ReadOnly` qualifier\\. Pydantic will not protect.*:UserWarning",
    # coming from smqtk_classifier via NRTK 0.25.0
    "ignore:`psycopg2` not importable.*:UserWarning",
    # From smqtk_classifier via NRTK 0.25.0
    "ignore:svm/svmutil not importable.*LibSvmClassifier will not be usable\\.:UserWarning",
    # From smqtk_detection via NRTK 0.25.0
    "ignore:`torch.cuda.amp.autocast.*` is deprecated.:FutureWarning",
    # From blockdiag via gradient, fixed at source but unreleased
    "ignore:pkg_resources is deprecated as an API:UserWarning",
    # From NRTK
    "ignore:The 'shapely.geos' module is deprecated.*:DeprecationWarning",  # TODO: investigate
    # From xaitk_saliency 0.12.0
    "ignore:the 'scipy.ndimage.filters' namespace is deprecated.*:DeprecationWarning",
    # TODO: Fix on upcoming MR. Continue to ignore for now.
    "ignore:More than 20 figures have been opened.:RuntimeWarning",
    "ignore:.*?not importable:UserWarning",
]

xfail_strict = true

# Omit the skipped optional dependencies from coverage report
[tool.coverage.run]
source = ["jatic_ri"]
omit = [
    "*/heart_adversarial_capability.py",
    "*/reallabel_labelling_capability.py",
    "*/survivor_capability.py",
]
